# spacchetti

./: .gitignore  .travis.yml  Makefile  README.md  add-from-bower.pl  azure-pipelines.standard.yml  azure-pipelines.yml  easy-purescript.nix  format.sh  generate.sh  get-package-inputs.nix  git-sha.json  install-deps.nix  local-setup.md  packages.json  prepare-bower.pl  prepare-mkpkg.pl  setup.sh  shell.nix  spacchetti.cabal  update-from-bower.pl  validate.pl  verify-setup.sh  verify.pl
bower-info/: react-basic.json
docs/: faq.md  index.rst  intro.md  local-setup-manual.md  local-setup.md  working.md
nix/: default.nix  nixpkgs.nix
scripts/: Prefetch.hs  README.md  add-from-bower.pl  compare.pl  copy-changes.pl  diff.pl  from-bower.pl  get-git-sha.pl  prepare-bower.hs  prepare-bower.pl  summary.pl  update-from-bower.hs  update-from-bower.pl  validate.pl  verify-package.pl  verify-set.go  verify-set.pl  verify.pl
src/: mkPackage.dhall  packages.dhall
src/groups/: LiamGoodacre.dhall  Thimoteus.dhall  anttih.dhall  bodil.dhall  brandonhamilton.dhall  cdepillabout.dhall  citizennet.dhall  community.dhall  epost.dhall  ethul.dhall  fehrenbach.dhall  felixSchl.dhall  garyb.dhall  gcanti.dhall  hdgarrood.dhall  justinwoo.dhall  kcsongor.dhall  krisajenkins.dhall  lumihq.dhall  morganthomas.dhall  natefaubion.dhall  nwolverson.dhall  owickstrom.dhall  paf31.dhall  paluh.dhall  passy.dhall  patches.dhall  purescript-contrib.dhall  purescript-node.dhall  purescript-web.dhall  purescript.dhall  rnons.dhall  sharkdp.dhall  slamdata.dhall  thomashoneyman.dhall
