name:                spachetti
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  

   
executable spachetti-prefetch
  main-is: scripts/Prefetch.hs
  other-modules:       
  build-depends:       base >=4.9 && <5
                     , text
                     , exceptions
                     , containers
                     , unordered-containers
                     , insert-ordered-containers
                     , stm
                     , protolude ==0.2.*
                     , either == 5.*
                     , aeson >= 1.0.0.0 && < 1.5.0.0
                     , aeson-pretty == 0.8.*
                     , dhall == 1.15.*
                     , prettyprinter >= 1.2.0.1 && < 1.3
                     , libnix == 0.2.*
                     , async-pool ==0.9.*
                     , retry == 0.7.*
  -- hs-source-dirs:      
  ghc-options:        -Wall
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , LambdaCase
                     , TupleSections
                     , ViewPatterns
  default-language:    Haskell2010